2012-09-25  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* preferences/: Code refactoring.

2012-09-17  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* NEWS: 1.7 release.
	* de_DE.po: Updated German translation.  Thanks t_bb_!

2012-09-16  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* liststore.py: Fixed a bug on changing group name.

2012-09-15  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* ar.po: Updated Arabic translation. Thanks Humaidan Mohammed!

2012-09-14  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* es_ES.po: Updated Spanish translation.  Thanks Adolfo Jayme
	  Barrientos!

2012-09-13  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* de_DE.po: Updated German translation.  Thanks t_bb_!
	* twitter/: Added support for 'User Timeline' API.
	* window.py: Added a notebook context menu for removing tabs.

2012-09-12  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* menu.py: Added support for opening conversation in other column.
	* preferences.py: Save the geometry of the preferences window.
	* feedsource.py: Added a new GSettings key 'recent-target'.
	* window.py: Fixed a wrong position problem when auto-start.
	* notification.py: Fixed a bug for auto-start.

2012-09-11  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* updatewindow.py: Added support for recent account.
	  Added recipient full name to retweet & reply dialogs.
	* menu.py, view.py, twitter/output.py, twitter/tweetentry.py:
	  Added a new pop-up menu item 'View Conversation'.
	* share/html/theme/: Added a new attribute 'data-inreplyto'.
	* plugins/twitter/: Added support for unofficial related_results API.
	* twittytwister/twitter.py, twittytwister/tjson.py: Added support
	  for JSON format in REST API.
	* com.googlecode.gfeedline.gschema.xml.in: Added a new gsettings
	  key 'recent-account'.

2012-09-10  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* utils/commonui.py: Added a new module.
	* accountliststore.py: Added account migration from GSettings.
	* window.py, feedsource.py: Disable sensitiveness of update menu